--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QueueQare</title>
+  <script async defer
+    src="https://sdk.woosmap.com/map/map.js?key=woos-2a4488cc-3e65-3af1-9057-41c4b646ced1&callback=initMap"></script>
 </head>
 
 <body>
